// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with 0 expenses 1`] = `
<div>
  <p>
    Viewing 0 expenses
  </p>
</div>
`;

exports[`should render correctly with 1 expense 1`] = `
<div>
  <p>
    Viewing 1 expense totalling 
    $1.95
  </p>
</div>
`;

exports[`should render correctly with 3 expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totalling 
    $1,141.95
  </p>
</div>
`;
